src/sitemap.less
/**
 * Sitemap Styling (inspired by screenshot from @mattbrailsford)
 * Trying to see if it's doable with CSSGrid and/or Flexbox
 */

@import "infobox";
@import "debug";

body {
	background: #f9fafc;
	font-family: Helvetica, Arial, sans-serif;
}

@supports (display: grid) and (--css: variables) {
	.sitenav {
		/* Define colors */
		--link-color: #35331d;
		--line-color: #dcdddf;
		--card-color: #4494ce;
		--card-bgcolor: #fff;
		
		/* Distance between the cards */
		--gutter-size: 24;
		
		/* Calculate other distances needed */
		--gutter:      ~"calc(var(--gutter-size) * 1px)";
		--doubleGut:   ~"calc(var(--gutter-size) * 2px)";
		--halfGut:     ~"calc(var(--gutter-size) * 0.5px)";
		--negativeGut: ~"calc(var(--gutter-size) * -1px)";
		
		/* Initial offset */
		--offset: 1;
	}
	
	.sitenav ul { list-style: none; padding: 0; margin: 0; }

	// The "Home" card
	.sitenav > ul > li > a {
		min-width: 200px;
		max-width: 50%;
		
		&::after {
			content: "";
			display: block;
			width: 1px;
			height: var(--gutter);
			position: absolute;
			left: var(--halfGut);
			top: 100%;
			border-left: 1px solid var(--line-color);
		}
	}

	.sitenav > ul > li > ul {
		display: grid;
		grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
		grid-gap: var(--gutter);
	}
}

.sitenav {
	max-width: 80%;
	margin-left: auto;
	margin-right: auto;

	header {
		margin-bottom: 2em;
	
		h1 {
			font-size: 1.25em;
			margin: 0;
		}
	
		h2 {
			font-size: 0.625em;
			font-weight: normal;
			margin: 0.5em 0;
		}
	}
}

.sitenav ul li {
	position: relative;
	z-index: 2;
}

.sitenav > ul > li > ul ul li:before {
	content: "";
	display: block;
	width: var(--gutter);
	height: ~"calc(101% + var(--gutter))";
	position: absolute;
	transform: translate(~"calc(var(--gutter) * var(--offset) - var(--halfGut))", var(--negativeGut));
	border: solid var(--line-color);
	border-width: 0 0 0 1px;
	background: linear-gradient(90deg, var(--line-color) 0, var(--line-color) 100%) left 60% no-repeat;
	background-size: 100% 1px;
	z-index: 0;
}

.sitenav > ul > li > ul ul li:last-child::before {
	height: var(--doubleGut);
	transform: translate(~"calc(var(--gutter) * var(--offset) - var(--halfGut))", var(--negativeGut));
	border-bottom-left-radius: 0.1em;
	border-width: 0 0 1px 1px;
	background: none;
}

.sitenav > ul > li > ul ul li + li {
	margin-top: var(--gutter);
}

.sitenav li a {
	display: block;
	border-top: 0.3em solid #d9524b;
	border-top-color: var(--card-color);
	background: var(--card-bgcolor);
	padding: 30px 15px 15px;
	border-radius: 0.3em;
	text-decoration: none;
	color: var(--link-color);
	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1);
	position: relative;
	font-weight: bold;

	&::before {
		content: attr(href);
		position: absolute;
		transform: translateY(-2em);
		display: block;
		max-width: 80%;
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
		font-size: 60%;
		color: var(--card-color);
		font-weight: normal;
	}
	
	&:hover::before {
		max-width: none;
		text-overflow: none;
		background: var(--card-bgcolor);
		box-shadow: 0 0 0 4px var(--card-bgcolor);
		border-radius: 0.1em;
	}
}


.sitenav li ul { padding-top: var(--gutter); }

.sitenav > ul ul ul li a           { margin-left: ~"calc(var(--gutter) * var(--offset))";}

.sitenav > ul ul ul ul li          { --offset: 2; }
.sitenav > ul ul ul ul ul li       { --offset: 3; }
.sitenav > ul ul ul ul ul ul li    { --offset: 4; }
.sitenav > ul ul ul ul ul ul ul li { --offset: 5; }

.sitenav li a                      { --card-color: #e54d42; }
.sitenav li li a                   { --card-color: #4494ce; }
.sitenav li li li a                { --card-color: #44c473; }
.sitenav li li li li a             { --card-color: #d7823c; }
.sitenav li li li li li a          { --card-color: #9461b0; }

// A collection doesn't show all of its children - just the last one
// Shouldn't be used on nodes that have grandchildren
.collection {
	ul li {
		&:not(:last-child) { display: none; }
		
		&:last-child {
			margin-top: 0;

			a {
				background: repeating-linear-gradient(120deg, var(--card-bgcolor), var(--card-bgcolor) 10px, #eee 10px, #eee 14px);
				background-clip: padding-box;
				border-right: 1px dashed var(--line-color);
				border-bottom: 1px dashed var(--line-color);
				border-left: 1px dashed var(--line-color);
				box-shadow: none;

				&::after {
					content: "";
					display: block;
					width: 100%;
					height: 100%;
					border-radius: 0.3em;
					border: 1px dashed var(--line-color);
					position: absolute;
					top: 3px;
					left: 3px;
					background: var(--card-bgcolor);
					z-index: -1;
					box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.1);
				}
			}
		}
	}
}

